<resources>
    <string name="app_name">Conversor de unidades</string>
    <string name="title">Conversor de medidas</string>
    <string name="reglas">Elija un tipo de conversión</string>
    <string name="temperatura">Temperatura</string>
    <string name="distancia">Distancia</string>
    <string name="Peso">Peso</string>
    <string name="ingresarcantidad">Ingrese una cantidad</string>


    <string-array name="pesos_array">
        <item>Kilogramos</item>
        <item>Libras</item>
        <item>Onzas</item>
        <item>Toneladas</item>
    </string-array>

    <string-array name="temperaturas_array">
        <item>Centígrados</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
        <item>Rankine</item>
    </string-array>

    <string-array name="distancias_array">
        <item>Metros</item>
        <item>Kilometros</item>
        <item>Millas</item>
        <item>Pulgadas</item>
    </string-array>
</resources>
