<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.utl.conversordemedidas.MainActivity">


    <TextView
        android:text="@string/reglas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/gray"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:text="@string/Peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/gray"
            android:id="@+id/textView4"
            android:layout_below="@+id/btnPeso"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp" />

        <TextView
            android:text="@string/distancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/gray"
            android:layout_below="@+id/btnDistancia"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView5" />

        <TextView
            android:text="@string/temperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/gray"
            android:id="@+id/textView3"
            android:layout_below="@+id/btnTemperatura"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <ImageButton
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:srcCompat="@drawable/ic_temp"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:id="@+id/btnTemperatura"
            android:onClick="onClickRbtnOpcion"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp" />

        <ImageButton
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:textAlignment="center"
            android:onClick="onClickRbtnOpcion"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_peso"
            android:id="@+id/btnPeso"
            android:layout_alignTop="@+id/btnTemperatura"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:srcCompat="@drawable/ic_dist"
            android:scaleType="fitXY"
            android:onClick="onClickRbtnOpcion"
            android:background="@android:color/transparent"
            android:id="@+id/btnDistancia"
            android:layout_marginTop="21dp"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
